# gl-forge

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: fetchvcpkg.cmake
examples/: CMakeLists.txt  main.cpp
include/glforge/: application.hpp  camera.hpp  shader.hpp  shader_program.hpp  texture.hpp  texture.inl  texture_sampler.hpp  vertex_array.hpp  vertex_buffer.hpp
src/: CMakeLists.txt  application.cpp  application.hpp  camera.cpp  camera.hpp  index_buffer.cpp  index_buffer.hpp  main.cpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  texture.hpp  texture_sampler.cpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  window.cpp  window.hpp
